{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 344,
  "lineage": "5e805fea-a56d-d260-687c-935eb9129a44",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "existing_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:459482583644:instance/i-090117c78f6f355ca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-090117c78f6f355ca",
            "instance_id": "i-090117c78f6f355ca",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "key_proyecto",
            "launch_time": "2024-06-03T19:57:34Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0c46a2ca0de4251dd",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-2-102.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.102",
            "public_dns": "ec2-54-85-76-200.compute-1.amazonaws.com",
            "public_ip": "54.85.76.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09e477a3b0ff252f3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be7c4dd39b3477d6",
            "tags": {
              "Name": "ec2_proyecto"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01c398ee4b2b234cf"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:459482583644:instance/i-090117c78f6f355ca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090117c78f6f355ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_proyecto",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c46a2ca0de4251dd",
            "private_dns": "ip-10-0-2-102.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.102",
            "public_dns": "ec2-54-85-76-200.compute-1.amazonaws.com",
            "public_ip": "54.85.76.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09e477a3b0ff252f3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be7c4dd39b3477d6",
            "tags": {
              "Name": "ec2_proyecto"
            },
            "tags_all": {
              "Name": "ec2_proyecto"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c398ee4b2b234cf"
            ]
          },
          "dependencies": [
            "aws_security_group.aws_sg",
            "aws_subnet.Subnet_vpc_publico",
            "aws_vpc.vpc_proyecto_tic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_publico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459482583644:internet-gateway/igw-02c43c976f2ff6656",
            "id": "igw-02c43c976f2ff6656",
            "owner_id": "459482583644",
            "tags": {
              "Name": "gw_publico"
            },
            "tags_all": {
              "Name": "gw_publico"
            },
            "vpc_id": "vpc-0ed1f575153a0b2f7"
          },
          "dependencies": [
            "aws_vpc.vpc_proyecto_tic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_privado",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459482583644:route-table/rtb-087910889564df4c1",
            "id": "rtb-087910889564df4c1",
            "owner_id": "459482583644",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_privado"
            },
            "tags_all": {
              "Name": "rt_privado"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1f575153a0b2f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_proyecto_tic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_publico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459482583644:route-table/rtb-0162dd332af7d4e03",
            "id": "rtb-0162dd332af7d4e03",
            "owner_id": "459482583644",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c43c976f2ff6656",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed1f575153a0b2f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw_publico",
            "aws_vpc.vpc_proyecto_tic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privado_rt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6f9bec7c29a36cf",
            "route_table_id": "rtb-087910889564df4c1",
            "subnet_id": "subnet-00ef10863c6bfa9ab"
          },
          "dependencies": [
            "aws_route_table.rt_privado",
            "aws_subnet.Subnet_privado",
            "aws_vpc.vpc_proyecto_tic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publico_2_rt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01238e8205dd350c1",
            "route_table_id": "rtb-0162dd332af7d4e03",
            "subnet_id": "subnet-0dbd04e584961b934"
          },
          "dependencies": [
            "aws_internet_gateway.gw_publico",
            "aws_route_table.rt_publico",
            "aws_subnet.Subnet_vpc_publico_2",
            "aws_vpc.vpc_proyecto_tic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publico_rt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004206a93822daaca",
            "route_table_id": "rtb-0162dd332af7d4e03",
            "subnet_id": "subnet-0be7c4dd39b3477d6"
          },
          "dependencies": [
            "aws_internet_gateway.gw_publico",
            "aws_route_table.rt_publico",
            "aws_subnet.Subnet_vpc_publico",
            "aws_vpc.vpc_proyecto_tic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459482583644:security-group/sg-01c398ee4b2b234cf",
            "description": "aws_sg allows HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Salida a internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c398ee4b2b234cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso SSL",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws_sg",
            "name_prefix": "",
            "owner_id": "459482583644",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_sg"
            },
            "tags_all": {
              "Name": "aws_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1f575153a0b2f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_proyecto_tic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ec2_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.102/32"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1918103139",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c398ee4b2b234cf",
            "security_group_rule_id": "sgr-05ba02bd85fd33f04",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.ec2_proyecto",
            "aws_security_group.aws_sg",
            "aws_subnet.Subnet_vpc_publico",
            "aws_vpc.vpc_proyecto_tic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_privado",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459482583644:subnet/subnet-00ef10863c6bfa9ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ef10863c6bfa9ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459482583644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ed1f575153a0b2f7"
          },
          "dependencies": [
            "aws_vpc.vpc_proyecto_tic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_vpc_publico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459482583644:subnet/subnet-0be7c4dd39b3477d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be7c4dd39b3477d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459482583644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_vpc_publico"
            },
            "tags_all": {
              "Name": "Subnet_vpc_publico"
            },
            "vpc_id": "vpc-0ed1f575153a0b2f7"
          },
          "dependencies": [
            "aws_vpc.vpc_proyecto_tic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_vpc_publico_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459482583644:subnet/subnet-0dbd04e584961b934",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbd04e584961b934",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459482583644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_vpc_publico_2"
            },
            "tags_all": {
              "Name": "Subnet_vpc_publico_2"
            },
            "vpc_id": "vpc-0ed1f575153a0b2f7"
          },
          "dependencies": [
            "aws_vpc.vpc_proyecto_tic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_proyecto_tic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459482583644:vpc/vpc-0ed1f575153a0b2f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_route_table_id": "rtb-0f540ad497b71e952",
            "default_security_group_id": "sg-0933df225d61daaf0",
            "dhcp_options_id": "dopt-0c0afb6f0e053aae7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed1f575153a0b2f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f540ad497b71e952",
            "owner_id": "459482583644",
            "tags": {
              "Name": "vpc_proyecto_tic"
            },
            "tags_all": {
              "Name": "vpc_proyecto_tic"
            }
          }
        }
      ]
    }
  ]
}